Refactor README structure and compilation instructions
Updated the README to improve clarity and organization, including renaming sections and adjusting instructions for compiling and running the project.